# executive-briefing-system

./: .env.example  README.md  demo_e2e.py  pyproject.toml  requirements.txt
compliance_gate/: __init__.py  agent.py
data_sources/: customer_connector.py  financial_connector.py  hr_connector.py  market_connector.py  news_connector.py  ops_connector.py
infra/: Dockerfile  docker-compose.yml
orchestrator/: main.py  pipeline.py  report_generator.py
shared/: config.py  logging_config.py  models.py  service_bus.py
specialists/: __init__.py  base_specialist.py  financial_specialist.py  market_specialist.py  operations_specialist.py  people_specialist.py  risk_specialist.py
synthesiser/: __init__.py  agent.py  prompts.py
tests/: test_pipeline.py
