[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "executive-briefing-system"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "shared*",
    "data_sources*",
    "specialists*",
    "synthesiser*",
    "compliance_gate*",
    "orchestrator*",
]
